--- a/app/index.html
+++ b/app/index.html
@@ -30,18 +30,20 @@
 					<a href="#" class="active">рус</a>
 					<a href="#">укр</a>
 				</div>
-				<p class="header__address">г. Киев,<br/> ул. Констанитновская 72</p>
+				<p class="header__address">г. Киев,<br /> ул. Констанитновская 72</p>
 				<a href="#" class="btn btn-border">Другие офисы</a>
 				<ul class="social-networks">
 					<li><a href="#"><img src="image/icons/telegram.svg" alt="telegram"></a></li>
 					<li><a href="#"><img src="image/icons/facebook.svg" alt="facebook"></a></li>
 				</ul>
 				<div class="phone">
-					<span class="phone__number"><img src="image/icons/phone.svg" alt="phone"> +30 044  332 77 72</span>
+					<span class="phone__number"><img src="image/icons/phone.svg" alt="phone"> +30 044 332 77 72</span>
 					<img src="image/icons/arrow-down.svg" alt="arrow-down" class="arrow-down">
 					<ul class="phone__list">
-						<li><span class="phone__number"><img src="image/icons/phone.svg" alt="phone"> +30 044  332 77 72</span></li>
-						<li><span class="phone__number"><img src="image/icons/phone.svg" alt="phone"> +30 044  332 77 72</span></li>
+						<li><span class="phone__number"><img src="image/icons/phone.svg" alt="phone"> +30 044 332 77
+								72</span></li>
+						<li><span class="phone__number"><img src="image/icons/phone.svg" alt="phone"> +30 044 332 77
+								72</span></li>
 					</ul>
 				</div>
 			</div>
@@ -71,33 +73,35 @@
 	<main>
 		<section class="first-screen">
 			<img src="image/icons/line.png" alt="" class="first-screen__line">
-				<div class="slider">
-						<div class="slider__item">
-							<img src="image/home.png" alt="">
-							<div class="container">
-								<h1 class="first-screen__title title-white">Производим и продаём защитные роллеты</h1>
-								<p class="first-screen__text">Режем профиль и собираем роллеты на собственном производстве, чтобы обеспечить высокую скорость
-										и лучший сервис для Украины.</p>
-								<a href="#" class="btn btn-red">Узнать подробнее</a>
-			
-							</div>
-						</div>
-						<div class="slider__item">
-							<img src="image/home.png" alt="">
-							<div class="container">
-								<h1 class="first-screen__title title-white">Производим и продаём защитные роллеты</h1>
-								<p class="first-screen__text">Режем профиль и собираем роллеты на собственном производстве, чтобы обеспечить высокую скорость
-										и лучший сервис для Украины.</p>
-								<a href="#" class="btn btn-red">Узнать подробнее</a>
-			
-							</div>
-						</div>
-						<div class="container slider__box-arrow">
-							<button class="slider__prev"></button>
-							<div class="slick-counter"><span class="current"></span><span class="total"></span></div>
-							<button class="slider__next"></button>
-						</div>
+			<div class="slider">
+				<div class="slider__item">
+					<img src="image/home.png" alt="">
+					<div class="container">
+						<h1 class="first-screen__title title-white">Производим и продаём защитные роллеты</h1>
+						<p class="first-screen__text">Режем профиль и собираем роллеты на собственном производстве,
+							чтобы обеспечить высокую скорость
+							и лучший сервис для Украины.</p>
+						<a href="#" class="btn btn-red">Узнать подробнее</a>
+
 					</div>
+				</div>
+				<div class="slider__item">
+					<img src="image/home.png" alt="">
+					<div class="container">
+						<h1 class="first-screen__title title-white">Производим и продаём защитные роллеты</h1>
+						<p class="first-screen__text">Режем профиль и собираем роллеты на собственном производстве,
+							чтобы обеспечить высокую скорость
+							и лучший сервис для Украины.</p>
+						<a href="#" class="btn btn-red">Узнать подробнее</a>
+
+					</div>
+				</div>
+				<div class="container slider__box-arrow">
+					<button class="slider__prev"></button>
+					<div class="slick-counter"><span class="current"></span><span class="total"></span></div>
+					<button class="slider__next"></button>
+				</div>
+			</div>
 		</section>
 
 		<section class="our-account">
@@ -107,7 +111,7 @@
 						<h2 class="our-account__title title-section">На нашем счету</h2>
 						<div class="our-account__image text-center">
 							<img src="image/golden-penny.png" alt="">
-							<span>Золотой партнер<br/> Алютех</span>
+							<span>Золотой партнер<br /> Алютех</span>
 							<small>с 2012 года.</small>
 						</div>
 					</div>
@@ -125,6 +129,51 @@
 			</div>
 		</section>
 
+		<section class="price">
+			<div class="container">
+				<h2 class="title-text-border">Цена</h2>
+				<div class="cards-dark">
+					<h3 class="title-white">Расчитайте стоимость роллет</h3>
+					<p class="price__text">Введите пожалуйста размеры роллеты в миллиметрах. и нажмите кнопку "Расчитать
+						стоимость"</p>
+					<form class="price__form">
+						<div class="spinner">
+							<span>Ширина, мм.</span>
+							<input type="number" min="100" max="10000" step="100" value="1500">
+						</div>
+						<div class="spinner">
+							<span>Высота, мм.</span>
+							<input type="number" min="100" max="10000" step="100" value="2500">
+						</div>
+						<a href="#" class="btn btn-red">Расчитать стоимость</a>
+					</form>
+				</div>
+			</div>
+		</section>
+
+		<section class="assortment">
+			<div class="container">
+				<h2 class="title-text-border">Ассортимент</h2>
+				<div class="row">
+					<div class="col-12 col-lg-9">
+						<a href="#" class="assortment__card">
+							<img src="image/assortement/image-1.png" alt="">
+							<div class="assortment__desc">
+								<h4>Роллеты</h4>
+								<p>Используем 100% комплектующих Алютех. Режем
+									и собираем роллеты на собственном производстве, чтобы обеспечить высокую скорость и
+									лучший сервис для Украины.</p>
+							</div>
+							<div class="assortment__hover">
+								<span>Перейти <img src="image/icons/arrow-right-small.svg" alt=""></span>
+							</div>
+						</a>
+					</div>
+					<div class="col-12 col-lg-3"></div>
+				</div>
+			</div>
+		</section>
+
 	</main>
 
 	<footer class="footer">
@@ -137,18 +186,18 @@
 				<div class="col-12 col-lg-7 call-us__info">
 					<h4 class="call-us__title">Звоните или пишите прямо сейчас</h4>
 					<div class="phone">
-						<span class="phone__number">+30 044  332 77 72</span>
+						<span class="phone__number">+30 044 332 77 72</span>
 						<img src="image/icons/arrow-down.svg" alt="arrow-down" class="arrow-down">
 						<ul class="phone__list">
-							<li><span class="phone__number">+30 044  332 77 72</span></li>
-							<li><span class="phone__number">+30 044  332 77 72</span></li>
+							<li><span class="phone__number">+30 044 332 77 72</span></li>
+							<li><span class="phone__number">+30 044 332 77 72</span></li>
 						</ul>
 					</div>
 					<p>Или оставьте номер и я перезвоню</p>
-						<form class="call-us__form">
-							<input type="text" placeholder="Введите ваш телефон" class="input-barck">
-							<input type="submit" class="btn btn-red" placeholder="Жду звонка">
-						</form>
+					<form class="call-us__form">
+						<input type="text" placeholder="Введите ваш телефон" class="input-bark">
+						<input type="submit" class="btn btn-red" value="Жду звонка">
+					</form>
 				</div>
 			</div>
 		</div>
