added new image and new section on page

--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
 			</div>
 			<nav class="menu">
 				<ul class="menu__list">
-					<li><a href="#">Главная</a></li>
+					<li><a href="#" class="active">Главная</a></li>
 					<li><a href="#">Кто мы?</a></li>
 					<li><a href="#">Роллеты</a></li>
 					<li><a href="#">Ассортимент</a></li>
@@ -165,15 +165,161 @@
 									лучший сервис для Украины.</p>
 							</div>
 							<div class="assortment__hover">
-								<span>Перейти <img src="image/icons/arrow-right-small.svg" alt=""></span>
+								Перейти
+								<img src="image/icons/arrow-right-small.svg" alt="">
 							</div>
 						</a>
 					</div>
-					<div class="col-12 col-lg-3"></div>
+					<div class="col-12 col-lg-3">
+						<a href="#" class="assortment__card">
+							<img src="image/assortement/image-2.png" alt="">
+							<div class="assortment__desc">
+								<h4>Секционные ворота</h4>
+							</div>
+							<div class="assortment__hover">
+								Перейти
+								<img src="image/icons/arrow-right-small.svg" alt="">
+							</div>
+						</a>
+					</div>
+					<div class="col-12 col-lg-3">
+						<a href="#" class="assortment__card">
+							<img src="image/assortement/image-3.png" alt="">
+							<div class="assortment__desc">
+								<h4>Вьездные ворота</h4>
+							</div>
+							<div class="assortment__hover">
+								Перейти
+								<img src="image/icons/arrow-right-small.svg" alt="">
+							</div>
+						</a>
+					</div>
+					<div class="col-12 col-lg-3">
+						<a href="#" class="assortment__card">
+							<img src="image/assortement/image-4.png" alt="">
+							<div class="assortment__desc">
+								<h4>Автоматика для ворот </h4>
+							</div>
+							<div class="assortment__hover">
+								Перейти
+								<img src="image/icons/arrow-right-small.svg" alt="">
+							</div>
+						</a>
+					</div>
+					<div class="col-12 col-lg-3">
+						<a href="#" class="assortment__card">
+							<img src="image/assortement/image-5.png" alt="">
+							<div class="assortment__desc">
+								<h4>Шлагбаумы</h4>
+							</div>
+							<div class="assortment__hover">
+								Перейти
+								<img src="image/icons/arrow-right-small.svg" alt="">
+							</div>
+						</a>
+					</div>
+					<div class="col-12 col-lg-3">
+						<a href="#" class="assortment__card">
+							<img src="image/assortement/image-6.png" alt="">
+							<div class="assortment__desc">
+								<h4>Алюминиевые отливы</h4>
+							</div>
+							<div class="assortment__hover">
+								Перейти
+								<img src="image/icons/arrow-right-small.svg" alt="">
+							</div>
+						</a>
+					</div>
 				</div>
 			</div>
 		</section>
 
+		<section class="calendar-section">
+			<div class="container">
+				<h4 class="calendar-section__title">Запишитесь на презентацию<br />
+					в шоуруме в удобное для вас время</h4>
+				<p>Посмотрите продукцию вживую. Выберите удобное время, оставьте конактные данные и нажмите кнопку
+					"Записаться на презентацию</p>
+				<div class="calendar-section__block box-shadow">
+					<form class="calendar-section__form">
+						<div class="calendar">
+							<div class="group calendar__header">
+								<p class="pointer active minusmonth"></p>
+								<p class="pointer addmonth">&raquo;</p>
+							</div>
+							<ul class="group">
+								<li>Пн</li>
+								<li>Вт</li>
+								<li>Ср</li>
+								<li>Чт</li>
+								<li>Пт</li>
+								<li>Сб</li>
+								<li>Вс</li>
+							</ul>
+							</ul>
+							<ul class="group calendar-body">
+								<!-- Dates go in here -->
+							</ul>
+
+						</div>
+						<input type="text" placeholder="Введите ваше имя" class="input-light">
+						<input type="text" placeholder="Введите ваш телефон" class="input-light">
+						<input type="submit" value="Записаться на презентацию" class="btn btn-red">
+						<div class="group-checkobox">
+							<label class="label-checkbox">
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+							<p>Я согласен на <a href="#">обработку персональных данных</a></p>
+						</div>
+					</form>
+					<div class="calendar-section__img">
+						<img src="image/image-2.png" alt="">
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="sale">
+			<div class="container">
+				<h2 class="title-text-border">Акции</h2>
+				<div class="slider-sale">
+					<div class="slider-sale__item cards-dark d-flex">
+						<div class="wrrap">
+							<h3 class="sale__title">Описание акции. Коротко
+								и по сути. Остальное внутри!
+								Открываешь и смотришь</h3>
+							<div class="sale__timer">
+								<span>До конца осталось:</span>
+								<ul class="timer d-flex" data-time="Oct 01 2019 00:00:00">
+									<li><span class="days"></span><small>Дней</small></li>
+									<li><span class="hours"></span><small>Часов</small></li>
+									<li><span class="minutes"></span><small>Минут</small></li>
+									<li><span class="seconds"></span><small>Секунд</small></li>
+								</ul>
+							</div>
+						</div>
+						<div class="slider-sale__image">
+							<img src="image/sale/image-1.png" alt="">
+						</div>
+					</div>
+					<!-- <div class="slider-sale__item cards-dark d-flex">
+						<div class="wrrap">
+							<h3 class="sale__title">Описание акции. Коротко
+								и по сути. Остальное внутри!
+								Открываешь и смотришь</h3>
+							<ul class="timer" data-time="Jul 22 2019 17:55:00">
+								<li class="days"></li>
+								<li class="hours"></li>
+								<li class="minutes"></li>
+								<li class="seconds"></li>
+							</ul>
+						</div>
+						<img src="image/sale/image-1.png" alt="">
+					</div> -->
+				</div>
+			</div>
+		</section>
 	</main>
 
 	<footer class="footer">
@@ -198,6 +344,55 @@
 						<input type="text" placeholder="Введите ваш телефон" class="input-bark">
 						<input type="submit" class="btn btn-red" value="Жду звонка">
 					</form>
+				</div>
+			</div>
+		</div>
+		<div class="footer__line"></div>
+		<div class="container">
+			<div class="row footer__middle">
+				<div class="col-12 col-lg-3">
+					<a href="#" class="footer__logo"><img src="image/logo.svg" alt=""></a>
+					<p>Роллеты, ворота и автоматика с доставкой по всей Украине</p>
+				</div>
+				<div class="col-12 col-lg-7">
+					<nav class="footer__nav">
+						<ul class="footer__menu">
+							<li><a href="#">Главная</a></li>
+							<li><a href="#">Кто мы?</a></li>
+							<li><a href="#">Стать диллером</a></li>
+						</ul>
+						<ul class="footer__menu">
+							<li><a href="#">Вакансии</a><span class="counter">2</span></li>
+							<li><a href="#">База знаний</a><span class="counter">10</span></li>
+							<li><a href="#">Отзывы</a><span class="counter">4</span></li>
+						</ul>
+						<ul class="footer__menu">
+							<li><a href="#">Роллеты</a></li>
+							<li><a href="#">Ассортимент</a></li>
+							<li><a href="#">Калькулятор стоимости</a></li>
+						</ul>
+						<ul class="footer__menu">
+							<li><a href="#">Оплата и доставка</a></li>
+							<li><a href="#">Акции</a><span class="counter">2</span></li>
+							<li><a href="#">Контакты</a></li>
+						</ul>
+					</nav>
+				</div>
+				<div class="col-12 col-lg-2 text-right">
+					<a href="#" class="who-creted">Кто создал сайт?</a>
+					<img src="image/text.svg" alt="">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12 col-lg-2">
+					<ul class="social-networks">
+						<li><a href="#"><img src="image/icons/facebook.svg" alt="facebook"></a></li>
+						<li><a href="#"><img src="image/icons/telegram.svg" alt="telegram"></a></li>
+					</ul>
+				</div>
+				<div class="col-12 col-lg-4 offset-lg-2 text-center">
+					<a href="#" class="footer__link">Политика конфиденциальности</a>
+					<a href="#" class="footer__link">Политика Cookies</a>
 				</div>
 			</div>
 		</div>
