--- a/app/index.html
+++ b/app/index.html
@@ -47,6 +47,7 @@
 					</ul>
 				</div>
 			</div>
+			<div class="menu__btn"><span></span></div>
 			<nav class="menu">
 				<ul class="menu__list">
 					<li><a href="#" class="active">Главная</a></li>
@@ -54,14 +55,16 @@
 					<li><a href="#">Роллеты</a></li>
 					<li><a href="#">Ассортимент</a></li>
 					<li>
-						<a href="#">База знаний</a>
-						<span class="counter">10</span>
+						<a href="#">База знаний
+							<span class="counter">10</span>
+						</a>
 					</li>
 					<li><a href="#">Стать диллером</a></li>
 					<li><a href="#">Калькулятор стоимости</a></li>
 					<li>
-						<a href="#">Акции</a>
-						<span class="counter">5</span>
+						<a href="#">Акции
+							<span class="counter">5</span>
+						</a>
 					</li>
 					<li><a href="#">Оплата и доставка</a></li>
 					<li><a href="#">Контакты</a></li>
@@ -96,7 +99,7 @@
 
 					</div>
 				</div>
-				<div class="container slider__box-arrow">
+				<div class="container slider__arrows">
 					<button class="slider__prev"></button>
 					<div class="slick-counter"><span class="current"></span><span class="total"></span></div>
 					<button class="slider__next"></button>
@@ -283,8 +286,8 @@
 		<section class="sale">
 			<div class="container">
 				<h2 class="title-text-border">Акции</h2>
-				<div class="slider-sale">
-					<div class="slider-sale__item cards-dark d-flex">
+				<div class="slider-sale cards-dark">
+					<div class="slider-sale__item d-flex">
 						<div class="wrrap">
 							<h3 class="sale__title">Описание акции. Коротко
 								и по сути. Остальное внутри!
@@ -303,20 +306,341 @@
 							<img src="image/sale/image-1.png" alt="">
 						</div>
 					</div>
-					<!-- <div class="slider-sale__item cards-dark d-flex">
+					<div class="slider-sale__item d-flex">
 						<div class="wrrap">
 							<h3 class="sale__title">Описание акции. Коротко
 								и по сути. Остальное внутри!
 								Открываешь и смотришь</h3>
-							<ul class="timer" data-time="Jul 22 2019 17:55:00">
-								<li class="days"></li>
-								<li class="hours"></li>
-								<li class="minutes"></li>
-								<li class="seconds"></li>
-							</ul>
+							<div class="sale__timer">
+								<span>До конца осталось:</span>
+								<ul class="timer d-flex" data-time="Sep 01 2019 00:00:00">
+									<li><span class="days"></span><small>Дней</small></li>
+									<li><span class="hours"></span><small>Часов</small></li>
+									<li><span class="minutes"></span><small>Минут</small></li>
+									<li><span class="seconds"></span><small>Секунд</small></li>
+								</ul>
+							</div>
 						</div>
-						<img src="image/sale/image-1.png" alt="">
-					</div> -->
+						<div class="slider-sale__image">
+							<img src="image/sale/image-2.png" alt="">
+						</div>
+					</div>
+					<div class="slider-sale__item d-flex">
+						<div class="wrrap">
+							<h3 class="sale__title">Описание акции. Коротко
+								и по сути. Остальное внутри!
+								Открываешь и смотришь</h3>
+							<div class="sale__timer">
+								<span>До конца осталось:</span>
+								<ul class="timer d-flex" data-time="Jul 29 2019 00:00:00">
+									<li><span class="days"></span><small>Дней</small></li>
+									<li><span class="hours"></span><small>Часов</small></li>
+									<li><span class="minutes"></span><small>Минут</small></li>
+									<li><span class="seconds"></span><small>Секунд</small></li>
+								</ul>
+							</div>
+						</div>
+						<div class="slider-sale__image">
+							<img src="image/sale/image-3.png" alt="">
+						</div>
+					</div>
+					<div class="slider-sale__item d-flex">
+						<div class="wrrap">
+							<h3 class="sale__title">Описание акции. Коротко
+								и по сути. Остальное внутри!
+								Открываешь и смотришь</h3>
+							<div class="sale__timer">
+								<span>До конца осталось:</span>
+								<ul class="timer d-flex" data-time="Sep 10 2019 00:00:00">
+									<li><span class="days"></span><small>Дней</small></li>
+									<li><span class="hours"></span><small>Часов</small></li>
+									<li><span class="minutes"></span><small>Минут</small></li>
+									<li><span class="seconds"></span><small>Секунд</small></li>
+								</ul>
+							</div>
+						</div>
+						<div class="slider-sale__image">
+							<img src="image/sale/image-4.png" alt="">
+						</div>
+					</div>
+					<div class="container slider-dark__arrows">
+						<button class="slider-dark__prev slider-sale-prev"></button>
+						<div class="slick-counter"><span class="current"></span><span class="total"></span></div>
+						<button class="slider-dark__next slider-sale-next"></button>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="reviews">
+			<div class="container">
+				<div class="reviews__tab">
+					<h2 class="title-text-border">Отзывы</h2>
+					<ul class="tab-nav nav flex-column nav-pills" id="pills-tab" role="tablist">
+						<li class="nav-item">
+							<a class="nav-link active" id="pills-client-tab" data-toggle="pill" href="#pills-client"
+								role="tab" aria-controls="pills-client" aria-selected="true">Клиентов</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" id="pills-partners-tab" data-toggle="pill" href="#pills-partners"
+								role="tab" aria-controls="pills-partners" aria-selected="false">Партнеров</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" id="pills-emloees-tab" data-toggle="pill" href="#pills-emloees"
+								role="tab" aria-controls="pills-emloees" aria-selected="false">Сотрудников</a>
+						</li>
+					</ul>
+					<div class="tab-content" id="pills-tabContent">
+						<div class="tab-pane fade show active" id="pills-client" role="tabpanel"
+							aria-labelledby="pills-client-tab">
+							<div class="slider-reviews">
+								<div class="slider-reviews__item">
+									<div class="reviews__header d-flex">
+										<div class="reviews__avatar">
+											<img src="image/image-1.png" alt="">
+										</div>
+										<span class="icon-social"><img src="image/icons/facebook.svg" alt=""></span>
+										<div class="reviews__title">
+											<h4>Диана Шорохова</h4>
+											<p>Владелец магазина “Туфелька”
+												в торговом центре</p>
+										</div>
+									</div>
+									<div class="reviews__desc">
+										<div class="video">
+
+										</div>
+									</div>
+								</div>
+								<div class="slider-reviews__item">
+									<div class="reviews__header d-flex">
+										<div class="reviews__avatar">
+											<img src="image/image-1.png" alt="">
+										</div>
+										<span class="icon-social"><img src="image/icons/facebook.svg" alt=""></span>
+										<div class="reviews__title">
+											<h4>Диана Шорохова</h4>
+											<p>Владелец магазина “Туфелька”
+												в торговом центре</p>
+										</div>
+									</div>
+									<div class="reviews__desc">
+										<div class="video">
+
+										</div>
+									</div>
+								</div>
+								<div class="slider-reviews__item">
+									<div class="reviews__header d-flex">
+										<div class="reviews__avatar">
+											<img src="image/image-1.png" alt="">
+										</div>
+										<span class="icon-social"><img src="image/icons/facebook.svg" alt=""></span>
+										<div class="reviews__title">
+											<h4>Диана Шорохова</h4>
+											<p>Владелец магазина “Туфелька”
+												в торговом центре</p>
+										</div>
+									</div>
+									<div class="reviews__desc">
+										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit,
+											vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus,
+											ac blandit elit tinci</p>
+									</div>
+								</div>
+								<div class="slider-reviews__item">
+									<div class="reviews__header d-flex">
+										<div class="reviews__avatar">
+											<img src="image/image-1.png" alt="">
+										</div>
+										<span class="icon-social"><img src="image/icons/facebook.svg" alt=""></span>
+										<div class="reviews__title">
+											<h4>Диана Шорохова</h4>
+											<p>Владелец магазина “Туфелька”
+												в торговом центре</p>
+										</div>
+									</div>
+									<div class="reviews__desc">
+										<div class="video">
+
+										</div>
+									</div>
+								</div>
+								<div class="container slider-dark__arrows">
+									<button class="slider-dark__prev slider-reviews-prev"></button>
+									<div class="slick-counter"><span class="current"></span><span class="total"></span>
+									</div>
+									<button class="slider-dark__next slider-reviews-next "></button>
+								</div>
+							</div>
+						</div>
+						<div class="tab-pane fade" id="pills-partners" role="tabpanel"
+							aria-labelledby="pills-partners-tab">
+							<div class="slider-reviews">
+								<div class="slider-reviews__item">
+									<div class="reviews__header d-flex">
+										<div class="reviews__avatar">
+											<img src="image/image-1.png" alt="">
+										</div>
+										<span class="icon-social"><img src="image/icons/facebook.svg" alt=""></span>
+										<div class="reviews__title">
+											<h4>Диана Шорохова</h4>
+											<p>Владелец магазина “Туфелька”
+												в торговом центре</p>
+										</div>
+									</div>
+									<div class="reviews__desc">
+										<div class="video">
+
+										</div>
+									</div>
+								</div>
+								<div class="slider-reviews__item">
+									<div class="reviews__header d-flex">
+										<div class="reviews__avatar">
+											<img src="image/image-1.png" alt="">
+										</div>
+										<span class="icon-social"><img src="image/icons/facebook.svg" alt=""></span>
+										<div class="reviews__title">
+											<h4>Диана Шорохова</h4>
+											<p>Владелец магазина “Туфелька”
+												в торговом центре</p>
+										</div>
+									</div>
+									<div class="reviews__desc">
+										<div class="video">
+
+										</div>
+									</div>
+								</div>
+								<div class="slider-reviews__item">
+									<div class="reviews__header d-flex">
+										<div class="reviews__avatar">
+											<img src="image/image-1.png" alt="">
+										</div>
+										<span class="icon-social"><img src="image/icons/facebook.svg" alt=""></span>
+										<div class="reviews__title">
+											<h4>Диана Шорохова</h4>
+											<p>Владелец магазина “Туфелька”
+												в торговом центре</p>
+										</div>
+									</div>
+									<div class="reviews__desc">
+										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit,
+											vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus,
+											ac blandit elit tinci</p>
+									</div>
+								</div>
+								<div class="slider-reviews__item">
+									<div class="reviews__header d-flex">
+										<div class="reviews__avatar">
+											<img src="image/image-1.png" alt="">
+										</div>
+										<span class="icon-social"><img src="image/icons/facebook.svg" alt=""></span>
+										<div class="reviews__title">
+											<h4>Диана Шорохова</h4>
+											<p>Владелец магазина “Туфелька”
+												в торговом центре</p>
+										</div>
+									</div>
+									<div class="reviews__desc">
+										<div class="video">
+
+										</div>
+									</div>
+								</div>
+								<div class="container slider-dark__arrows">
+									<button class="slider-dark__prev slider-reviews-prev"></button>
+									<div class="slick-counter"><span class="current"></span><span class="total"></span>
+									</div>
+									<button class="slider-dark__next slider-reviews-next "></button>
+								</div>
+							</div>
+						</div>
+						<div class="tab-pane fade" id="pills-emloees" role="tabpanel"
+							aria-labelledby="pills-emloees-tab">
+							<div class="slider-reviews">
+								<div class="slider-reviews__item">
+									<div class="reviews__header d-flex">
+										<div class="reviews__avatar">
+											<img src="image/image-1.png" alt="">
+										</div>
+										<span class="icon-social"><img src="image/icons/facebook.svg" alt=""></span>
+										<div class="reviews__title">
+											<h4>Диана Шорохова</h4>
+											<p>Владелец магазина “Туфелька”
+												в торговом центре</p>
+										</div>
+									</div>
+									<div class="reviews__desc">
+										<div class="video">
+
+										</div>
+									</div>
+								</div>
+								<div class="slider-reviews__item">
+									<div class="reviews__header d-flex">
+										<div class="reviews__avatar">
+											<img src="image/image-1.png" alt="">
+										</div>
+										<span class="icon-social"><img src="image/icons/facebook.svg" alt=""></span>
+										<div class="reviews__title">
+											<h4>Диана Шорохова</h4>
+											<p>Владелец магазина “Туфелька”
+												в торговом центре</p>
+										</div>
+									</div>
+									<div class="reviews__desc">
+										<div class="video">
+
+										</div>
+									</div>
+								</div>
+								<div class="slider-reviews__item">
+									<div class="reviews__header d-flex">
+										<div class="reviews__avatar">
+											<img src="image/image-1.png" alt="">
+										</div>
+										<span class="icon-social"><img src="image/icons/facebook.svg" alt=""></span>
+										<div class="reviews__title">
+											<h4>Диана Шорохова</h4>
+											<p>Владелец магазина “Туфелька”
+												в торговом центре</p>
+										</div>
+									</div>
+									<div class="reviews__desc">
+										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit,
+											vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus,
+											ac blandit elit tinci</p>
+									</div>
+								</div>
+								<div class="slider-reviews__item">
+									<div class="reviews__header d-flex">
+										<div class="reviews__avatar">
+											<img src="image/image-1.png" alt="">
+										</div>
+										<span class="icon-social"><img src="image/icons/facebook.svg" alt=""></span>
+										<div class="reviews__title">
+											<h4>Диана Шорохова</h4>
+											<p>Владелец магазина “Туфелька”
+												в торговом центре</p>
+										</div>
+									</div>
+									<div class="reviews__desc">
+										<div class="video">
+
+										</div>
+									</div>
+								</div>
+								<div class="container slider-dark__arrows">
+									<button class="slider-dark__prev slider-reviews-prev"></button>
+									<div class="slick-counter"><span class="current"></span><span class="total"></span>
+									</div>
+									<button class="slider-dark__next slider-reviews-next "></button>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
