added responsive for page

--- a/app/index.html
+++ b/app/index.html
@@ -110,7 +110,7 @@
 		<section class="our-account">
 			<div class="container">
 				<div class="row">
-					<div class="col-12 col-lg-5">
+					<div class="col-12 col-md-5">
 						<h2 class="our-account__title title-section">На нашем счету</h2>
 						<div class="our-account__image text-center">
 							<img src="image/golden-penny.png" alt="">
@@ -118,7 +118,7 @@
 							<small>с 2012 года.</small>
 						</div>
 					</div>
-					<div class="col-12 col-lg-7">
+					<div class="col-12 col-md-7">
 						<p class="our-account__text">34 795<span>Защитных
 								роллет</span></p>
 						<p class="our-account__text">9 569<span>Алюминиевых
@@ -137,7 +137,7 @@
 				<h2 class="title-text-border">Цена</h2>
 				<div class="cards-dark">
 					<h3 class="title-white">Расчитайте стоимость роллет</h3>
-					<p class="price__text">Введите пожалуйста размеры роллеты в миллиметрах. и нажмите кнопку "Расчитать
+					<p class="price__text">Введите пожалуйста размеры роллеты в миллиметрах и нажмите кнопку "Расчитать
 						стоимость"</p>
 					<form class="price__form">
 						<div class="spinner">
@@ -158,10 +158,10 @@
 			<div class="container">
 				<h2 class="title-text-border">Ассортимент</h2>
 				<div class="row">
-					<div class="col-12 col-lg-9">
+					<div class="col-12 col-md-9">
 						<a href="#" class="assortment__card">
 							<img src="image/assortement/image-1.png" alt="">
-							<div class="assortment__desc">
+							<div class="assortment__desc assortment__desc_big">
 								<h4>Роллеты</h4>
 								<p>Используем 100% комплектующих Алютех. Режем
 									и собираем роллеты на собственном производстве, чтобы обеспечить высокую скорость и
@@ -173,7 +173,7 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-12 col-lg-3">
+					<div class="col-12 col-md-3">
 						<a href="#" class="assortment__card">
 							<img src="image/assortement/image-2.png" alt="">
 							<div class="assortment__desc">
@@ -185,7 +185,7 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-12 col-lg-3">
+					<div class="col-12 col-md-3">
 						<a href="#" class="assortment__card">
 							<img src="image/assortement/image-3.png" alt="">
 							<div class="assortment__desc">
@@ -197,7 +197,7 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-12 col-lg-3">
+					<div class="col-12 col-md-3">
 						<a href="#" class="assortment__card">
 							<img src="image/assortement/image-4.png" alt="">
 							<div class="assortment__desc">
@@ -209,7 +209,7 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-12 col-lg-3">
+					<div class="col-12 col-md-3">
 						<a href="#" class="assortment__card">
 							<img src="image/assortement/image-5.png" alt="">
 							<div class="assortment__desc">
@@ -221,7 +221,7 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-12 col-lg-3">
+					<div class="col-12 col-md-3">
 						<a href="#" class="assortment__card">
 							<img src="image/assortement/image-6.png" alt="">
 							<div class="assortment__desc">
@@ -476,169 +476,11 @@
 						</div>
 						<div class="tab-pane fade" id="pills-partners" role="tabpanel"
 							aria-labelledby="pills-partners-tab">
-							<div class="slider-reviews">
-								<div class="slider-reviews__item">
-									<div class="reviews__header d-flex">
-										<div class="reviews__avatar">
-											<img src="image/image-1.png" alt="">
-										</div>
-										<span class="icon-social"><img src="image/icons/facebook.svg" alt=""></span>
-										<div class="reviews__title">
-											<h4>Диана Шорохова</h4>
-											<p>Владелец магазина “Туфелька”
-												в торговом центре</p>
-										</div>
-									</div>
-									<div class="reviews__desc">
-										<div class="video">
-
-										</div>
-									</div>
-								</div>
-								<div class="slider-reviews__item">
-									<div class="reviews__header d-flex">
-										<div class="reviews__avatar">
-											<img src="image/image-1.png" alt="">
-										</div>
-										<span class="icon-social"><img src="image/icons/facebook.svg" alt=""></span>
-										<div class="reviews__title">
-											<h4>Диана Шорохова</h4>
-											<p>Владелец магазина “Туфелька”
-												в торговом центре</p>
-										</div>
-									</div>
-									<div class="reviews__desc">
-										<div class="video">
-
-										</div>
-									</div>
-								</div>
-								<div class="slider-reviews__item">
-									<div class="reviews__header d-flex">
-										<div class="reviews__avatar">
-											<img src="image/image-1.png" alt="">
-										</div>
-										<span class="icon-social"><img src="image/icons/facebook.svg" alt=""></span>
-										<div class="reviews__title">
-											<h4>Диана Шорохова</h4>
-											<p>Владелец магазина “Туфелька”
-												в торговом центре</p>
-										</div>
-									</div>
-									<div class="reviews__desc">
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit,
-											vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus,
-											ac blandit elit tinci</p>
-									</div>
-								</div>
-								<div class="slider-reviews__item">
-									<div class="reviews__header d-flex">
-										<div class="reviews__avatar">
-											<img src="image/image-1.png" alt="">
-										</div>
-										<span class="icon-social"><img src="image/icons/facebook.svg" alt=""></span>
-										<div class="reviews__title">
-											<h4>Диана Шорохова</h4>
-											<p>Владелец магазина “Туфелька”
-												в торговом центре</p>
-										</div>
-									</div>
-									<div class="reviews__desc">
-										<div class="video">
-
-										</div>
-									</div>
-								</div>
-								<div class="container slider-dark__arrows">
-									<button class="slider-dark__prev slider-reviews-prev"></button>
-									<div class="slick-counter"><span class="current"></span><span class="total"></span>
-									</div>
-									<button class="slider-dark__next slider-reviews-next "></button>
-								</div>
-							</div>
+							Клиентов
 						</div>
 						<div class="tab-pane fade" id="pills-emloees" role="tabpanel"
 							aria-labelledby="pills-emloees-tab">
-							<div class="slider-reviews">
-								<div class="slider-reviews__item">
-									<div class="reviews__header d-flex">
-										<div class="reviews__avatar">
-											<img src="image/image-1.png" alt="">
-										</div>
-										<span class="icon-social"><img src="image/icons/facebook.svg" alt=""></span>
-										<div class="reviews__title">
-											<h4>Диана Шорохова</h4>
-											<p>Владелец магазина “Туфелька”
-												в торговом центре</p>
-										</div>
-									</div>
-									<div class="reviews__desc">
-										<div class="video">
-
-										</div>
-									</div>
-								</div>
-								<div class="slider-reviews__item">
-									<div class="reviews__header d-flex">
-										<div class="reviews__avatar">
-											<img src="image/image-1.png" alt="">
-										</div>
-										<span class="icon-social"><img src="image/icons/facebook.svg" alt=""></span>
-										<div class="reviews__title">
-											<h4>Диана Шорохова</h4>
-											<p>Владелец магазина “Туфелька”
-												в торговом центре</p>
-										</div>
-									</div>
-									<div class="reviews__desc">
-										<div class="video">
-
-										</div>
-									</div>
-								</div>
-								<div class="slider-reviews__item">
-									<div class="reviews__header d-flex">
-										<div class="reviews__avatar">
-											<img src="image/image-1.png" alt="">
-										</div>
-										<span class="icon-social"><img src="image/icons/facebook.svg" alt=""></span>
-										<div class="reviews__title">
-											<h4>Диана Шорохова</h4>
-											<p>Владелец магазина “Туфелька”
-												в торговом центре</p>
-										</div>
-									</div>
-									<div class="reviews__desc">
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit,
-											vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus,
-											ac blandit elit tinci</p>
-									</div>
-								</div>
-								<div class="slider-reviews__item">
-									<div class="reviews__header d-flex">
-										<div class="reviews__avatar">
-											<img src="image/image-1.png" alt="">
-										</div>
-										<span class="icon-social"><img src="image/icons/facebook.svg" alt=""></span>
-										<div class="reviews__title">
-											<h4>Диана Шорохова</h4>
-											<p>Владелец магазина “Туфелька”
-												в торговом центре</p>
-										</div>
-									</div>
-									<div class="reviews__desc">
-										<div class="video">
-
-										</div>
-									</div>
-								</div>
-								<div class="container slider-dark__arrows">
-									<button class="slider-dark__prev slider-reviews-prev"></button>
-									<div class="slick-counter"><span class="current"></span><span class="total"></span>
-									</div>
-									<button class="slider-dark__next slider-reviews-next "></button>
-								</div>
-							</div>
+							Партнеров
 						</div>
 					</div>
 				</div>
@@ -649,11 +491,11 @@
 	<footer class="footer">
 		<div class="container">
 			<div class="row call-us">
-				<div class="col-12 col-lg-2 offset-lg-1 call-us__meneger">
+				<div class="col-12 col-md-3 col-lg-2 offset-lg-1 call-us__meneger">
 					<span class="call-us__img"><img src="image/image-1.png" alt=""></span>
 					<p>Менеджер Александра</p>
 				</div>
-				<div class="col-12 col-lg-7 call-us__info">
+				<div class="col-12 col-md-9 col-lg-7 call-us__info">
 					<h4 class="call-us__title">Звоните или пишите прямо сейчас</h4>
 					<div class="phone">
 						<span class="phone__number">+30 044 332 77 72</span>
@@ -673,7 +515,7 @@
 		</div>
 		<div class="footer__line"></div>
 		<div class="container">
-			<div class="row footer__middle">
+			<div class="row footer__middle align-items-center align-items-lg-start">
 				<div class="col-12 col-lg-3">
 					<a href="#" class="footer__logo"><img src="image/logo.svg" alt=""></a>
 					<p>Роллеты, ворота и автоматика с доставкой по всей Украине</p>
@@ -686,9 +528,9 @@
 							<li><a href="#">Стать диллером</a></li>
 						</ul>
 						<ul class="footer__menu">
-							<li><a href="#">Вакансии</a><span class="counter">2</span></li>
-							<li><a href="#">База знаний</a><span class="counter">10</span></li>
-							<li><a href="#">Отзывы</a><span class="counter">4</span></li>
+							<li><a href="#">Вакансии <span class="counter">2</span></a></li>
+							<li><a href="#">База знаний <span class="counter">10</span></a></li>
+							<li><a href="#">Отзывы <span class="counter">4</span></a></li>
 						</ul>
 						<ul class="footer__menu">
 							<li><a href="#">Роллеты</a></li>
@@ -697,24 +539,24 @@
 						</ul>
 						<ul class="footer__menu">
 							<li><a href="#">Оплата и доставка</a></li>
-							<li><a href="#">Акции</a><span class="counter">2</span></li>
+							<li><a href="#">Акции <span class="counter">2</span></a></li>
 							<li><a href="#">Контакты</a></li>
 						</ul>
 					</nav>
 				</div>
-				<div class="col-12 col-lg-2 text-right">
-					<a href="#" class="who-creted">Кто создал сайт?</a>
-					<img src="image/text.svg" alt="">
+				<div class="col-12 col-md-3 order-12 order-lg-0 col-lg-2">
+					<div class="footer__right-col">
+						<a href="#" class="who-created">Кто создал сайт?</a>
+						<img src="image/text.svg" alt="">
+					</div>
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-12 col-lg-2">
+				<div class="col-12 col-md-2 mt-20">
 					<ul class="social-networks">
 						<li><a href="#"><img src="image/icons/facebook.svg" alt="facebook"></a></li>
 						<li><a href="#"><img src="image/icons/telegram.svg" alt="telegram"></a></li>
 					</ul>
 				</div>
-				<div class="col-12 col-lg-4 offset-lg-2 text-center">
+				<div class="col-12 col-md-6 col-lg-4 offset-lg-2 offset-md-1 text-center mt-20">
 					<a href="#" class="footer__link">Политика конфиденциальности</a>
 					<a href="#" class="footer__link">Политика Cookies</a>
 				</div>
