--- a/app/index.html
+++ b/app/index.html
@@ -114,6 +114,7 @@
 						<h2 class="our-account__title title-section">На нашем счету</h2>
 						<div class="our-account__image text-center">
 							<img src="image/golden-penny.png" alt="">
+							<img src="image/golden-penny-mob.png" alt="" class="mob-screen">
 							<span>Золотой партнер<br /> Алютех</span>
 							<small>с 2012 года.</small>
 						</div>
@@ -159,7 +160,7 @@
 				<h2 class="title-text-border">Ассортимент</h2>
 				<div class="row">
 					<div class="col-12 col-md-9">
-						<a href="#" class="assortment__card">
+						<a href="#" class="assortment__card assortment__card_big">
 							<img src="image/assortement/image-1.png" alt="">
 							<div class="assortment__desc assortment__desc_big">
 								<h4>Роллеты</h4>
@@ -267,7 +268,7 @@
 						</div>
 						<input type="text" placeholder="Введите ваше имя" class="input-light">
 						<input type="text" placeholder="Введите ваш телефон" class="input-light">
-						<input type="submit" value="Записаться на презентацию" class="btn btn-red">
+						<button type="submit" class="btn btn-red">Записаться на презентацию</button>
 						<div class="group-checkobox">
 							<label class="label-checkbox">
 								<input type="checkbox">
@@ -376,7 +377,7 @@
 			<div class="container">
 				<div class="reviews__tab">
 					<h2 class="title-text-border">Отзывы</h2>
-					<ul class="tab-nav nav flex-column nav-pills" id="pills-tab" role="tablist">
+					<ul class="tab-nav nav nav-pills" id="pills-tab" role="tablist">
 						<li class="nav-item">
 							<a class="nav-link active" id="pills-client-tab" data-toggle="pill" href="#pills-client"
 								role="tab" aria-controls="pills-client" aria-selected="true">Клиентов</a>
@@ -408,7 +409,9 @@
 									</div>
 									<div class="reviews__desc">
 										<div class="video">
-
+											<iframe src="https://www.youtube.com/embed/NE6pANWJGuU" frameborder="0"
+												allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+												allowfullscreen></iframe>
 										</div>
 									</div>
 								</div>
@@ -426,7 +429,9 @@
 									</div>
 									<div class="reviews__desc">
 										<div class="video">
-
+											<iframe src="https://www.youtube.com/embed/NE6pANWJGuU" frameborder="0"
+												allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+												allowfullscreen></iframe>
 										</div>
 									</div>
 								</div>
@@ -462,7 +467,9 @@
 									</div>
 									<div class="reviews__desc">
 										<div class="video">
-
+											<iframe src="https://www.youtube.com/embed/NE6pANWJGuU" frameborder="0"
+												allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+												allowfullscreen></iframe>
 										</div>
 									</div>
 								</div>
