--- a/app/index.html
+++ b/app/index.html
@@ -37,13 +37,14 @@
 					<li><a href="#"><img src="image/icons/facebook.svg" alt="facebook"></a></li>
 				</ul>
 				<div class="phone">
-					<span class="phone__number"><img src="image/icons/phone.svg" alt="phone"> +30 044 332 77 72</span>
+					<span class="phone__number"><img src="image/icons/phone.svg" alt="phone"> <a
+							href="tel: +300443327772">+30 044 332 77 72</a></span>
 					<img src="image/icons/arrow-down.svg" alt="arrow-down" class="arrow-down">
 					<ul class="phone__list">
-						<li><span class="phone__number"><img src="image/icons/phone.svg" alt="phone"> +30 044 332 77
-								72</span></li>
-						<li><span class="phone__number"><img src="image/icons/phone.svg" alt="phone"> +30 044 332 77
-								72</span></li>
+						<li><span class="phone__number"><img src="image/icons/phone.svg" alt="phone"> <a
+									href="tel: +300443327772">+30 044 332 77 72</a></span></li>
+						<li><span class="phone__number"><img src="image/icons/phone.svg" alt="phone"> <a
+									href="tel: +300443327772">+30 044 332 77 72</a></span></li>
 					</ul>
 				</div>
 			</div>
@@ -505,11 +506,13 @@
 				<div class="col-12 col-md-9 col-lg-7 call-us__info">
 					<h4 class="call-us__title">Звоните или пишите прямо сейчас</h4>
 					<div class="phone">
-						<span class="phone__number">+30 044 332 77 72</span>
+						<span class="phone__number"><a href="tel: +300443327772">+30 044 332 77 72</a></span>
 						<img src="image/icons/arrow-down.svg" alt="arrow-down" class="arrow-down">
 						<ul class="phone__list">
-							<li><span class="phone__number">+30 044 332 77 72</span></li>
-							<li><span class="phone__number">+30 044 332 77 72</span></li>
+							<li><span class="phone__number"><a href="tel: +300443327772">+30 044 332 77 72</a></span>
+							</li>
+							<li><span class="phone__number"><a href="tel: +300443327772">+30 044 332 77 72</a></span>
+							</li>
 						</ul>
 					</div>
 					<p>Или оставьте номер и я перезвоню</p>
