--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
 	<title>Главная</title>
 	<meta name='description' content="" />
 	<meta name="keywords" content="" />
-	<link rel="icon" type="image/x-icon" href="favicon.ico" />
+	<link rel="icon" type="image/x-icon" href="image/favicon.png" />
 	<!-- fonts -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 	<!-- style bootstrap -->
