--- a/app/index.html
+++ b/app/index.html
@@ -62,24 +62,24 @@
 			<div class="menu__btn"><span></span></div>
 			<nav class="menu">
 				<ul class="menu__list">
-					<li><a href="#" class="active">Главная</a></li>
-					<li><a href="#">Кто мы?</a></li>
-					<li><a href="#">Роллеты</a></li>
-					<li><a href="#">Ассортимент</a></li>
+					<li><a href="index.html" class="active">Главная</a></li>
+					<li><a href="about-us.html">Кто мы?</a></li>
+					<li><a href="roletta.html">Роллеты</a></li>
+					<li><a href="assortment.html">Ассортимент</a></li>
 					<li>
-						<a href="#">База знаний
+						<a href="knowledge-base.html">База знаний
 							<span class="counter">10</span>
 						</a>
 					</li>
-					<li><a href="#">Стать диллером</a></li>
-					<li><a href="#">Калькулятор стоимости</a></li>
+					<li><a href="dealer.html">Стать диллером</a></li>
+					<li><a href="calculator.html">Калькулятор стоимости</a></li>
 					<li>
-						<a href="#">Акции
+						<a href="promotions.html">Акции
 							<span class="counter">5</span>
 						</a>
 					</li>
-					<li><a href="#">Оплата и доставка</a></li>
-					<li><a href="#">Контакты</a></li>
+					<li><a href="payment-delivery.html">Оплата и доставка</a></li>
+					<li><a href="contacts.html">Контакты</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -296,16 +296,16 @@
 			</div>
 		</section>
 
-		<section class="sale">
+		<section class="promotions">
 			<div class="container">
 				<h2 class="title-text-border">Акции</h2>
-				<div class="slider-sale cards-dark">
-					<div class="slider-sale__item d-flex">
+				<div class="slider-promotions cards-dark">
+					<div class="slider-promotions__item d-flex">
 						<div class="wrrap">
-							<h3 class="sale__title">Описание акции. Коротко
+							<h3 class="promotions__title">Описание акции. Коротко
 								и по сути. Остальное внутри!
 								Открываешь и смотришь</h3>
-							<div class="sale__timer">
+							<div class="promotions__timer">
 								<span>До конца осталось:</span>
 								<ul class="timer d-flex" data-time="Oct 01 2019 00:00:00">
 									<li><span class="days"></span><small>Дней</small></li>
@@ -315,16 +315,16 @@
 								</ul>
 							</div>
 						</div>
-						<div class="slider-sale__image">
-							<img src="image/sale/image-1.png" alt="">
+						<div class="slider-promotions__image">
+							<img src="image/promotions/image-1.png" alt="">
 						</div>
 					</div>
-					<div class="slider-sale__item d-flex">
+					<div class="slider-promotions__item d-flex">
 						<div class="wrrap">
-							<h3 class="sale__title">Описание акции. Коротко
+							<h3 class="promotions__title">Описание акции. Коротко
 								и по сути. Остальное внутри!
 								Открываешь и смотришь</h3>
-							<div class="sale__timer">
+							<div class="promotions__timer">
 								<span>До конца осталось:</span>
 								<ul class="timer d-flex" data-time="Sep 01 2019 00:00:00">
 									<li><span class="days"></span><small>Дней</small></li>
@@ -334,16 +334,16 @@
 								</ul>
 							</div>
 						</div>
-						<div class="slider-sale__image">
-							<img src="image/sale/image-2.png" alt="">
+						<div class="slider-promotions__image">
+							<img src="image/promotions/image-2.png" alt="">
 						</div>
 					</div>
-					<div class="slider-sale__item d-flex">
+					<div class="slider-promotions__item d-flex">
 						<div class="wrrap">
-							<h3 class="sale__title">Описание акции. Коротко
+							<h3 class="promotions__title">Описание акции. Коротко
 								и по сути. Остальное внутри!
 								Открываешь и смотришь</h3>
-							<div class="sale__timer">
+							<div class="promotions__timer">
 								<span>До конца осталось:</span>
 								<ul class="timer d-flex" data-time="Jul 29 2019 00:00:00">
 									<li><span class="days"></span><small>Дней</small></li>
@@ -353,16 +353,16 @@
 								</ul>
 							</div>
 						</div>
-						<div class="slider-sale__image">
-							<img src="image/sale/image-3.png" alt="">
+						<div class="slider-promotions__image">
+							<img src="image/promotions/image-3.png" alt="">
 						</div>
 					</div>
-					<div class="slider-sale__item d-flex">
+					<div class="slider-promotions__item d-flex">
 						<div class="wrrap">
-							<h3 class="sale__title">Описание акции. Коротко
+							<h3 class="promotions__title">Описание акции. Коротко
 								и по сути. Остальное внутри!
 								Открываешь и смотришь</h3>
-							<div class="sale__timer">
+							<div class="promotions__timer">
 								<span>До конца осталось:</span>
 								<ul class="timer d-flex" data-time="Sep 10 2019 00:00:00">
 									<li><span class="days"></span><small>Дней</small></li>
@@ -372,14 +372,14 @@
 								</ul>
 							</div>
 						</div>
-						<div class="slider-sale__image">
-							<img src="image/sale/image-4.png" alt="">
+						<div class="slider-promotions__image">
+							<img src="image/promotions/image-4.png" alt="">
 						</div>
 					</div>
 					<div class="container slider-dark__arrows">
-						<button class="slider-dark__prev slider-sale-prev"></button>
+						<button class="slider-dark__prev slider-promotions-prev"></button>
 						<div class="slick-counter"><span class="current"></span><span class="total"></span></div>
-						<button class="slider-dark__next slider-sale-next"></button>
+						<button class="slider-dark__next slider-promotions-next"></button>
 					</div>
 				</div>
 			</div>
