added new images and icons, remaned assortement

--- a/app/roletta.html
+++ b/app/roletta.html
@@ -86,6 +86,133 @@
     </header>
 
     <main>
+        <section class="roletta-header">
+            <div class="container">
+                <ul class="bread-crumbs">
+                    <li class="bread-crumbs__item"><a href="#">Главная</a></li>
+                    <li class="bread-crumbs__item"><a href="#">Ассортимент</a></li>
+                    <li class="bread-crumbs__item"><span>Роллеты</span></li>
+                </ul>
+                <div class="row">
+                    <div class="col-12 col-lg-8">
+                        <h1 class="roletta-header__title title-white">Производим и продаём защитные роллеты</h1>
+                        <p>Используем 100% комплектующих Алютех. Режем и собираем роллеты на собственном производстве,
+                            чтобы обеспечить высокую скорость и лучший сервис для Украины.</p>
+                    </div>
+                </div>
+                <img src="image/roletta.png" alt="" class="roletta-header__img">
+                <div class="row">
+                    <div class="col-12 col-lg-3">
+                        <div class="roletta-header__card">
+                            <img src="image/img-1.png" alt="">
+                            <h4>Для окон</h4>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-3">
+                        <div class="roletta-header__card">
+                            <img src="image/img-2.png" alt="">
+                            <h4>Для дверей</h4>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-3">
+                        <div class="roletta-header__card">
+                            <img src="image/img-3.png" alt="">
+                            <h4>Для витрин</h4>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-3">
+                        <div class="roletta-header__card">
+                            <img src="image/img-4.png" alt="">
+                            <h4>Для гаражей</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="function-roletta">
+            <div class="container">
+                <div class="row align-items-center mb-87">
+                    <div class="col-12 col-lg-7">
+                        <h2 class="title-section">Функциональное назначение роллет</h2>
+                    </div>
+                    <div class="col-12 col-lg-5">
+                        <div class="function-roletta__item mb-0">
+                            <div class="circle circle_big">
+                                <img src="image/icons/padlock.svg" alt="padlock">
+                            </div>
+                            <p>Защита от взлома</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-lg-4">
+                        <div class="function-roletta__item">
+                            <div class="circle">
+                                <img src="image/icons/shining.svg" alt="shining">
+                            </div>
+                            <p>Красота и эстетика</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <div class="function-roletta__item">
+                            <div class="circle">
+                                <img src="image/icons/sun.svg" alt="sun">
+                            </div>
+                            <p>Защита от слонца</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <div class="function-roletta__item">
+                            <div class="circle">
+                                <img src="image/icons/half-battery.svg" alt="half-battery">
+                            </div>
+                            <p>Экономия энергии</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <div class="function-roletta__item">
+                            <div class="circle">
+                                <img src="image/icons/eye.svg" alt="eye">
+                            </div>
+                            <p>Защита от посторонних глаз</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <div class="function-roletta__item">
+                            <div class="circle">
+                                <img src="image/icons/thunderstorm-rain.svg" alt="thunderstorm-rain">
+                            </div>
+                            <p>Защита от непогоды</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <div class="function-roletta__item">
+                            <div class="circle">
+                                <img src="image/icons/noise.svg" alt="noise">
+                            </div>
+                            <p>Защита от шума</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="cards-dark function-roletta__form">
+                    <h3>Закажите бесплатную консультацию и рассчет</h3>
+                    <p>Чтобы не тратить время на изучение параметров, мы вам сами все
+                        расскажем и посчитаем стоимость</p>
+                    <form>
+                        <input type="text" class="input-bark" placeholder="Введите ваш телефон">
+                        <input type="submit" value="Жду звонка" class="btn btn-red">
+                    </form>
+                </div>
+            </div>
+            </div>
+
+            <div class="line"></div>
+        </section>
+
+        <section class="roletta-assortement">
+
+        </section>
 
     </main>
 
